Updated to 4.17. Refactored old code.
Created new repository to keep old project apart. PickUpable item class
has been refactored, good to use from blueprints, nothing unnecessary.
Functions in player's class were rewritten to be clean and nice. Project
is set up for furhter work. Pochemy ya pishu na angliiskom.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Unreal Editor files
+Binaries
+Build
+Intermediate
+Saved
+StarterContent
+
+# Visual Studio files
+*.VC.db
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
