Added bot classes with some set up stuff
Added bots' controller and pawn. Set up controller a bit so it knows who
the player is, what controller is controlling. Also set all default
values in gameMode.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=DynamicPixelsTask
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Wooden_Hangar.Wooden_Hangar
 GameDefaultMap=/Game/Maps/Wooden_Hangar.Wooden_Hangar
-GlobalDefaultGameMode=/Script/DynamicPixelsTask.DynamicPixelsTaskGameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/MyDynamicPixelsTaskGameModeBase.MyDynamicPixelsTaskGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -103,6 +103,7 @@ bSuppressFaceRemapTable=False
 bSupportUVFromHitResults=False
 bDisableActiveActors=False
 bDisableCCD=False
+bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=False
 bSubsteppingAsync=False
@@ -111,3 +112,5 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+PhysXTreeRebuildRate=10
+
