--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -72,7 +72,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="PickUp",NewName="PickUpTrace")
-
++ActiveClassRedirects=(OldClassName=”UCusñtomPawnMovementComponent”,NewClassName=”UCustomPawnMovementComponent”)
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
